Jad parsing fix, and minor api fixes.